display fix to center the bio on mobile

--- a/src/css/profile.less
+++ b/src/css/profile.less
@@ -120,6 +120,7 @@
         margin-bottom: 10px;
         max-height: 46px;
         overflow: hidden;
+        text-align: center;
       }
     }
   }
